tests/NormalTests/paczka2/big_fuzzy/80379846.err
Error in line 1: R1GL8AVIU S806 5,7
Error in line 2: R1GL8AVIU A360 16,2
Error in line 4: imNgZU A904 32,0
Error in line 5: imNgZU S806 5,3
Error in line 13: d5fFPjw A360 32,2
Error in line 17: d5fFPjw S236 95,2
Error in line 16: R1GL8AVIU S236 42,2
Error in line 24: imNgZU A360 97,80
Error in line 21: imNgZU S806 16,8
Error in line 26: u5hHfElJQ S236 53,5
Error in line 27: u5hHfElJQ A360 9,9
Error in line 29: A360 S236 40,5
Error in line 30: A360 S806 58,8
Error in line 48: A8r A904 231,8
Error in line 45: u5hHfElJQ A360 86,8
Error in line 49: A8r S236 24,7
Error in line 61: A360 A904 42,9
Error in line 53: imNgZU A360 334,5
Error in line 72: d5fFPjw A904 53,4
Error in line 93: d5fFPjw A360 41,5
Error in line 98: A8r S236 8,0
Error in line 96: u5hHfElJQ A360 27,5
Error in line 109: A360 S806 78,9
Error in line 128: R1GL8AVIU A904 30,1
Error in line 143: R1GL8AVIU A904 8,6
Error in line 144: R1GL8AVIU A360 1,1
Error in line 146: R1GL8AVIU S806 7,3
Error in line 140: A8r S806 83,9
Error in line 150: R1GL8AVIU A90p 169,8
Error in line 153: R1GL8AVIU S806 76,3
Error in line 157: imNgZU A904 96,4
Error in line 162: d5fFPjw A360 87,6
Error in line 176: A360 S236 95,50
Error in line 171: A360 A904 49,0
Error in line 175: imNgZU A360 70,5
Error in line 196: u5hHfElJQ A904 2,6
Error in line 211: R1GL8AVIU S236 700,4
Error in line 183: A360 S236 64,6
Error in line 218: imNgZU S806 h10,7
Error in line 212: R1GL8AVIU A360 54,6
Error in line 221: A8r S234 50,9
Error in line 224: ctc A360 390,3
Error in line 219: R1GL8AVIU A904 60,8
Error in line 233: u5hHfElJQ A360 58,5
Error in line 227: A8r S236 417,8
Error in line 237: ctc A904 60,4
Error in line 240: A8r S806 12,7
